--- a/src/app/main/role/role.component.scss
+++ b/src/app/main/role/role.component.scss
@@ -15,7 +15,7 @@
 .container-fluid{
   background-color: #FFFFFF;
   border-radius: 12px;
-  padding-top: 16px;
+  // padding-top: 16px;
 }
 
 .input_text {
@@ -150,19 +150,35 @@ border-bottom-right-radius: 10px;
 }
 }
 
-@media (min-width: 1400px) {
-  .col-xxl-5 {
-      flex: 0 0 auto;
-      width: 40%;
+.col-lg-4-9 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: calc((100% - var(--width-button) * 2) / 2) !important
   }
-  
-  .col-xxl-2{
-    flex: 0 0 auto;
-    width: 20%;
+
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
   }
-  
-  .col-xxl-1 {
-    flex: 0 0 auto;
-    width: 10%;
+}
+
+.col-lg-5-45 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: calc((100% - var(--width-button)) / 2) !important
+  }
+
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
+  }
+}
+
+.col-lg-1-1 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: var(--width-button) !important;
+  }
+
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
   }
 }
