--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -187,7 +187,7 @@ body {
 
 @media (min-width: 992px) {
   .btn-padding-right {
-    padding-right: 12 !important;
+    padding-right: 12px !important;
   }
 
   .btn-padding-left {
@@ -198,4 +198,20 @@ body {
 .cancel-padding {
   padding-left: 0px !important;
   padding-right: 0px !important;
+}
+
+.mg-button-tools{
+  margin-top: 16px !important;
+
+  @media (max-width: 991px) {
+    margin-top: 0px !important;
+  }
+}
+
+.pd-0 {
+  padding: 0px !important;
+}
+
+.border-header-table {
+  border-radius: 0px !important
 }
