--- a/src/app/main/user/user.component.scss
+++ b/src/app/main/user/user.component.scss
@@ -64,7 +64,7 @@
 .container-fluid{
   background-color: #FFFFFF;
   border-radius: 12px;
-  padding-top: 16px;
+  // padding-top: 16px;
 }
 
 input[type="file"] {
