--- a/src/app/main/contract-type/contract-type.component.scss
+++ b/src/app/main/contract-type/contract-type.component.scss
@@ -35,7 +35,7 @@
   border: 0.5px solid #F1F5FE;
   margin: 0px;
   width: 100%;
-  height: 35px;
+  height: 42px;
   outline:0px;
   background-color: #F1F5FE;
   padding: 10px 16px 10px 16px;
@@ -134,20 +134,36 @@
   }
 }
 
-@media (min-width: 1400px) {
-  .col-xxl-5 {
-      flex: 0 0 auto;
-      width: 40%;
+.col-lg-5-45 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: calc((100% - var(--width-button)) / 2) !important
   }
-  
-  .col-xxl-2{
-    flex: 0 0 auto;
-    width: 20%;
+
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
   }
-  
-  .col-xxl-1 {
-    flex: 0 0 auto;
-    width: 10%;
+}
+
+.col-lg-4-9 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: calc((100% - var(--width-button) * 2) / 2) !important
+  }
+
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
+  }
+}
+
+.col-lg-1-1 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: var(--width-button) !important;
+  }
+
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
   }
 }
 
