--- a/src/app/main/digital-certificate/digital-certificate.component.scss
+++ b/src/app/main/digital-certificate/digital-certificate.component.scss
@@ -29,7 +29,6 @@
 .container-fluid {
   background-color: #FFFFFF;
   border-radius: 12px;
-  padding-top: 15px;
 }
 
 input[type="file"] {
@@ -52,7 +51,7 @@ input[type="file"] {
   border: 0.5px solid #F1F5FE;
   margin: 0px;
   width: 100%;
-  height: 35px;
+  height: 42px;
   outline:0px;
   background-color: #F1F5FE;
   padding: 10px 16px 10px 16px;
@@ -171,7 +170,7 @@ input[type="file"] {
     border: 0.5px solid #F1F5FE;
     margin: 0px;
     width: 100%;
-    height: 35px;
+    height: 42px;
     outline:0px;
     background-color: #F1F5FE;
     border-radius: 8px;
@@ -180,23 +179,40 @@ input[type="file"] {
 
   .p-treeselect-label,
   .p-dropdown-label {
-    padding: 5px 5px 5px 15px;
+    margin: auto 0px auto 8px;
   }
 }
 
-@media (min-width: 1400px) {
-  .col-xxl-4 {
-    flex: 0 0 auto;
-    width: 26.6666666667%;
+
+.col-lg-3-3 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: calc((100% - var(--width-button) * 2) / 3) !important
   }
 
-  .col-xxl-2 {
-    flex: 0 0 auto;
-    width: 20%;
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
+  }
+}
+
+.col-lg-3-6 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: calc((100% - var(--width-button)) / 3) !important
   }
 
-  .col-xxl-1 {
-    flex: 0 0 auto;
-    width: 10%;
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
+  }
+}
+
+.col-lg-1-1 {
+  @media (min-width: 992px) {
+    flex: 0 0 auto !important;
+    width: var(--width-button) !important;
+  }
+
+  @media (max-width: 991px) {
+    margin-top: 16px !important;
   }
 }
